syntax = "proto3";

option java_package = "xyz.srclab.spring.boot.proto";
//option java_outer_classname = "ProtoMessage";
option java_multiple_files = true;
//option java_generic_services = true;

import "message.proto";

service LbService {
    rpc requestLb(RequestMessage) returns (ResponseMessage);
}